--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jest": "^27.0.6",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.12",
+    "path": "^0.12.7",
     "sequelize": "^6.6.5"
   },
   "devDependencies": {},
